--- a/WarsawCityGameServer/WarsawCityGamesServer.DataAccess/WarsawCityGamesServer.DataAccess.csproj
+++ b/WarsawCityGameServer/WarsawCityGamesServer.DataAccess/WarsawCityGamesServer.DataAccess.csproj
@@ -53,9 +53,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataAccessServices\Instances\AchievementsService.cs" />
     <Compile Include="DataAccessServices\Instances\FriendshipsService.cs" />
     <Compile Include="DataAccessServices\Instances\PlayerService.cs" />
     <Compile Include="DataAccessServices\Instances\UserProfileService.cs" />
+    <Compile Include="DataAccessServices\Interfaces\IAchievementsService.cs" />
     <Compile Include="DataAccessServices\Interfaces\IFriendshipsService.cs" />
     <Compile Include="DataAccessServices\Interfaces\IPlayerService.cs" />
     <Compile Include="DataAccessServices\Interfaces\IUserProfileService.cs" />
