--- a/WarsawCityGameServer/WarsawCityGamesServer.Models/WarsawCityGamesServer.Models.csproj
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Models/WarsawCityGamesServer.Models.csproj
@@ -39,6 +39,7 @@
     <Compile Include="Friendships\FriendshipDto.cs" />
     <Compile Include="Missions\CurrentMissionDto.cs" />
     <Compile Include="Missions\PlayerMissionDto.cs" />
+    <Compile Include="Players\PlayerRankingDto.cs" />
     <Compile Include="Players\PlayerRegisterDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserData\PlayerDataDto.cs" />
