--- a/WarsawCityGame/WarsawCityGames.App/build.gradle
+++ b/WarsawCityGame/WarsawCityGames.App/build.gradle
@@ -25,6 +25,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     apt "com.google.dagger:dagger-compiler:2.0.1"
 
+    compile 'com.android.support:cardview-v7:23.0.+'
+    compile 'com.android.support:recyclerview-v7:23.0.+'
     compile 'javax.annotation:jsr250-api:1.0'
     compile project(':WarsawCityGames.Communication')
     compile project(':WarsawCityGames.Shared')
