--- a/WarsawCityGameServer/WarsawCityGamesServer.Services/WarsawCityGamesServer.Services.csproj
+++ b/WarsawCityGameServer/WarsawCityGamesServer.Services/WarsawCityGamesServer.Services.csproj
@@ -227,7 +227,18 @@
     <None Include="Properties\PublishProfiles\warsawcitygames - Web Deploy %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\warsawcitygames - Web Deploy %283%29.pubxml" />
     <None Include="Properties\PublishProfiles\warsawcitygames - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\warsawcitygamesapi - FTP %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\warsawcitygamesapi - FTP %283%29.pubxml" />
+    <None Include="Properties\PublishProfiles\warsawcitygamesapi - FTP %284%29.pubxml" />
+    <None Include="Properties\PublishProfiles\warsawcitygamesapi - FTP %285%29.pubxml" />
+    <None Include="Properties\PublishProfiles\warsawcitygamesapi - FTP %286%29.pubxml" />
+    <None Include="Properties\PublishProfiles\warsawcitygamesapi - FTP %287%29.pubxml" />
     <None Include="Properties\PublishProfiles\warsawcitygamesapi - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\warsawcitygamesapi - Web Deploy %282%29.pubxml" />
+    <None Include="Properties\PublishProfiles\warsawcitygamesapi - Web Deploy %283%29.pubxml" />
+    <None Include="Properties\PublishProfiles\warsawcitygamesapi - Web Deploy %284%29.pubxml" />
+    <None Include="Properties\PublishProfiles\warsawcitygamesapi - Web Deploy %285%29.pubxml" />
+    <None Include="Properties\PublishProfiles\warsawcitygamesapi - Web Deploy %286%29.pubxml" />
     <None Include="Properties\PublishProfiles\warsawcitygamesapi - Web Deploy %287%29.pubxml" />
     <None Include="Properties\PublishProfiles\warsawcitygamesapi - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
