--- a/WarsawCityGame/WarsawCityGames.App/build.gradle
+++ b/WarsawCityGame/WarsawCityGames.App/build.gradle
@@ -25,23 +25,23 @@ dependencies {
     testCompile 'junit:junit:4.12'
     apt "com.google.dagger:dagger-compiler:2.0.1"
 
-    compile 'com.android.support:cardview-v7:23.0.+'
-    compile 'com.android.support:recyclerview-v7:23.0.+'
-    compile 'javax.annotation:jsr250-api:1.0'
     compile project(':WarsawCityGames.Communication')
     compile project(':WarsawCityGames.Shared')
     compile project(':WarsawCityGames.Models')
+    compile 'javax.annotation:jsr250-api:1.0'
+    compile 'com.android.support:cardview-v7:23.3.0'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'javax.annotation:jsr250-api:1.0'
     compile 'com.theartofdev.edmodo:android-image-cropper:2.1.+'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
     compile 'com.squareup.retrofit:converter-gson:2.0.0-beta2'
     compile 'com.squareup.okhttp:logging-interceptor:2.6.0'
     compile 'com.google.dagger:dagger:2.0.1'
-    compile 'javax.annotation:jsr250-api:1.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.android.support:appcompat-v7:23.2.1'
+    compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.github.dmytrodanylyk:android-morphing-button:+'
-    compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.android.support:support-v4:23.3.0'
     compile 'com.google.android.gms:play-services:8.4.0'
-    compile 'com.android.support:design:23.2.1'
+    compile 'com.android.support:design:23.3.0'
 }
