restoring working fradles

--- a/WarsawCityGame/WarsawCityGames.App/build.gradle
+++ b/WarsawCityGame/WarsawCityGames.App/build.gradle
@@ -29,8 +29,8 @@ dependencies {
     compile project(':WarsawCityGames.Shared')
     compile project(':WarsawCityGames.Models')
     compile 'javax.annotation:jsr250-api:1.0'
-    compile 'com.android.support:cardview-v7:23.3.0'
-    compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.android.support:cardview-v7:23.0.+'
+    compile 'com.android.support:recyclerview-v7:23.0.+'
     compile 'javax.annotation:jsr250-api:1.0'
     compile 'com.theartofdev.edmodo:android-image-cropper:2.1.+'
     compile 'com.squareup.retrofit:retrofit:2.0.0-beta2'
@@ -39,9 +39,9 @@ dependencies {
     compile 'com.google.dagger:dagger:2.0.1'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'de.hdodenhof:circleimageview:2.0.0'
-    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.github.dmytrodanylyk:android-morphing-button:+'
-    compile 'com.android.support:support-v4:23.3.0'
+    compile 'com.android.support:support-v4:23.2.1'
     compile 'com.google.android.gms:play-services:8.4.0'
-    compile 'com.android.support:design:23.3.0'
+    compile 'com.android.support:design:23.2.1'
 }
